Refactor Azure deployment workflow for Python app
Updated deployment workflow for Azure Web App.

--- a/.github/workflows/main_jcprojeto.yml
+++ b/.github/workflows/main_jcprojeto.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
 name: Build and deploy Python app to Azure Web App - jcprojeto
 
@@ -14,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # Required for actions/checkout
+      contents: read 
 
     steps:
       - uses: actions/checkout@v4
@@ -24,22 +21,17 @@ jobs:
         with:
           python-version: '3.13'
 
-      # ✅ Corrigido: install requirements.txt da raiz
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # 🧹 Limpa arquivos locais que não devem ir pro deploy
       - name: Cleaning testing files
         run: |
           rm -f db.sqlite3
           rm -f .env
 
-      # 📦 Compacta os arquivos do projeto para upload
       - name: Zip artifact for deployment
-        run: |
-          zip release.zip ./* -r
+        run: zip -r release.zip ./
 
-      # ⬆️ Envia o artefato para o job de deploy
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
@@ -67,4 +59,7 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B224687249BE41CEBC7D37376D044432 }}
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'jcprojeto'  # 🔹 Nome do seu Web App no Azure
+          package: release.zip
