--- a/.github/workflows/main_jcprojeto.yml
+++ b/.github/workflows/main_jcprojeto.yml
@@ -77,4 +77,5 @@ jobs:
         with:
           app-name: 'jcprojeto'
           slot-name: 'Production'
-          package: python-app/release.zip
+          package: release.zip
+
