--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,15 @@ distro==1.9.0
 Django==4.2.24
 duckduckgo_search==8.1.1
 exceptiongroup==1.3.0
-google-ai-generativelangugenerativeaiage==0.6.15
-google-api-core==2.28.1
+google-ai-generativelanguage
+google-api-core
 google-api-python-client==2.186.0
 google-auth==2.42.1
 google-auth-httplib2==0.2.1
 google-generativeai==0.8.5
-googleapis-common-protos==1.71.0
-grpcio==1.76.0
-grpcio-status==1.76.0
+googleapis-common-protos
+grpcio
+grpcio-status
 gTTS==2.5.4
 h11==0.16.0
 httpcore==1.0.9
@@ -29,8 +29,8 @@ jiter==0.11.1
 lxml==6.0.2
 openai==2.6.1
 primp==0.15.0
-proto-plus==1.26.1
-protobuf==5.29.5
+proto-plus
+protobuf
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.12.3
